--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/yourusername/thinkrush/main/assets/icons/appIcon/appIcon.png">
+    <link rel="icon" type="image/x-icon" href="assets/AppIcon.png">
 </head>
 <body>
     <header class="header">
@@ -189,11 +189,11 @@
                         <div class="contact-info">
                             <div class="contact-item">
                                 <strong>Email:</strong>
-                                <a href="mailto:privacy@thinkrush.app">privacy@thinkrush.app</a>
+                                <a href="mailto:robert.gjoshevski@outlook.com">robert.gjoshevski@outlook.com</a>
                             </div>
                             <div class="contact-item">
                                 <strong>Support:</strong>
-                                <a href="mailto:support@thinkrush.app">support@thinkrush.app</a>
+                                <a href="mailto:robert.gjoshevski@outlook.com">robert.gjoshevski@outlook.com</a>
                             </div>
                         </div>
                     </article>
@@ -220,8 +220,8 @@
                 <div class="footer-section">
                     <h4>Connect</h4>
                     <ul>
-                        <li><a href="https://github.com/yourusername/thinkrush" target="_blank">GitHub</a></li>
-                        <li><a href="mailto:hello@thinkrush.app">Email</a></li>
+                        <li><a href="https://github.com/RobertGjoshevski/ThinkRushWebsite" target="_blank">GitHub</a></li>
+                        <li><a href="mailto:robert.gjoshevski@outlook.com">Email</a></li>
                     </ul>
                 </div>
             </div>
