--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <h1>ThinkRush</h1>
                 </div>
                 <nav class="nav">
+                    <a href="index.html" class="nav-link">Home</a>
                     <a href="privacy.html" class="nav-link">Privacy</a>
                     <a href="terms.html" class="nav-link">Terms</a>
                     <a href="contact.html" class="nav-link">Contact</a>
@@ -35,7 +36,7 @@
                     <p class="hero-subtitle">Challenge your mind, connect with friends, and have fun with trivia battles.</p>
                     <div class="hero-buttons">
                         <a href="privacy.html" class="btn btn-primary">Privacy Policy</a>
-                        <a href="terms.html" class="btn btn-secondary">Terms of Service</a>
+                        <a href="terms.html" class="btn btn-primary">Terms of Service</a>
                     </div>
                 </div>
             </section>
