--- a/terms.html
+++ b/terms.html
@@ -19,6 +19,7 @@
                     <h1>ThinkRush</h1>
                 </div>
                 <nav class="nav">
+                    <a href="index.html" class="nav-link">Home</a>
                     <a href="privacy.html" class="nav-link">Privacy</a>
                     <a href="terms.html" class="nav-link active">Terms</a>
                     <a href="contact.html" class="nav-link">Contact</a>
